# Content-Quality-Index

./: .gitignore  README.md  package.json
backend/: .env.example  .gitignore  AI_DETECTION_MODELS_AUDIT.md  AI_DETECTION_TABLES.md  AI_DETECTOR_INTERFACE_AUDIT.md  CELERY.md  DETECTOR_REGISTRY_AUDIT.md  EVALUATION_PIPELINE_README.md  MIGRATIONS.md  PRE_STAGE_5_AUDIT.md  README.md  RUBRIC_REFACTOR_COMPLETE.md  alembic.ini  celery_worker.py  debug_import_error.txt  debug_output.txt  debug_sqlalchemy.txt  pyproject.toml  run_alembic_v3.py
backend/alembic/: env.py
backend/alembic/versions/: 20260129_001_aeo_scores.py  2026_02_03_1011-3944edee89aa_initial_schema_sqlite.py  2026_02_04_0522-47ff518ed8bb_add_hashed_password.py
backend/app/: main.py
backend/app/aeo/: constants.py  rewrite_prompts.py  scorer.py  signals.py
backend/app/ai_detection/: __init__.py
backend/app/api/: __init__.py  approvals.py  auth.py  blogs.py  evaluations.py  reviews.py  rewrites.py  router.py  sandbox.py  versions.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  connection.py  dependencies.py  engine.py  examples.py
backend/app/models/: __init__.py  aeo_scores.py  ai_detection.py  approvals.py  base.py  blogs.py  escalations.py  evaluations.py  reviews.py  rewrites.py  scores.py  users.py
backend/app/schemas/: __init__.py  api.py  sandbox.py
backend/app/workflows/: __init__.py  (+7 more)
backend/scripts/: check_syntax_router.py  create_db.py  debug_alembic.py  debug_sqlalchemy.py  seed_user.py  test_import.py  test_login.py  test_upload.py
(+73 files in other folders)
