[project]
name = "content-quality-engine"
version = "0.1.0"
description = "Internal Content Quality Engine with Human-in-the-Loop"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    
    # Database
    "sqlalchemy[asyncio]==2.0.27",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    
    # Validation & Serialization
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    
    # Task Queue
    "celery==5.3.6",
    "redis==5.0.1",
    
    # HTTP Client
    "httpx==0.26.0",
    
    # Auth & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    
    # Utilities
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.4",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "ruff==0.2.1",
    "mypy==1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
